--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-server.port=8080
+server.port=8081
 mybatis.mapper-locations=classpath*:mapper/*.xml
 #mybatis.type-aliases-package=com.dflong.greenbull.entity
-spring.datasource.url=jdbc:mysql://localhost:3306/school_mall?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/school_mall?serverTimezone=GMT%2B8&characterEncoding=utf-8&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+#spring.redis.lettuce.pool.enabled=true
+#spring.redis.lettuce.pool.max-active=8
+#spring.redis.lettuce.pool.max-wait=-1ms
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.min-idle=8
