--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,62 +1,48 @@
 spring:
   kafka:
-    # Kafka集群地址
-    bootstrap-servers: localhost:9092
-    # 生产者配置
-    producer:
-      # 消息确认机制：0-不需要确认，1-只需要leader确认，all-所有副本都需要确认
-      acks: all
-      # 幂等重试次数
-      retries: 3
-      # 重试间隔时间
-      retry-backoff-ms: 3000
-      # 消息key的序列化器
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      # 消息value的序列化器
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      # 批次大小，当批次满了之后才会发送 16k
-      batch-size: 16384
-      # 缓冲区大小 32m
-      buffer-memory: 33554432
+    bootstrap-servers: localhost:9092 # Kafka集群地址
+    producer: # 生产者配置
+      acks: all # 消息确认机制：0-不需要确认，1-只需要leader确认，all-所有副本都需要确认
+      retries: 4 # 幂等重试次数
+      retry-backoff-ms: 100  # 重试间隔时间
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer  # 消息key的序列化器
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer  # 消息value的序列化器
+      batch-size: 16384 # 批次大小，当批次满了之后才会发送 16k
+      buffer-memory: 33554432 # 缓冲区大小 32m
+#      transaction-id-prefix: trxx-id- # 使用事务时配置
       properties:
         linger:
-          ms: 10000 # 批处理延迟时间上限。[实际不会配这么长，这里用于测速]这里配置为 10 * 1000 ms 过后，不管是否消息大小是否到达 batch-size 或者消息大小到达 buffer-memory 后，都直接发送一次请求。
-    # 消费者配置
-    consumer:
-      # 消息key的反序列化器
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      # 消息value的反序列化器
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      # 消费者组ID
-#      group-id: default-group
-      # 自动偏移量重置策略：earliest-从头开始消费，latest-从最新的开始消费，none-如果没有偏移量则抛出异常
-      auto-offset-reset: earliest
-      # 是否自动提交偏移量
-      enable-auto-commit: false
-      # 自动提交偏移量的间隔时间
-      auto-commit-interval: 1000
+          ms: 100 # 批处理延迟时间上限。不管是否消息大小是否到达 batch-size 或者消息大小到达 buffer-memory 后，都直接发送一次请求。
+    consumer: # 消费者配置
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer # 消息key的反序列化器
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer # 消息value的反序列化器
+      auto-offset-reset: earliest # 自动偏移量重置策略：earliest-从头开始消费，latest-从最新的开始消费，none-如果没有偏移量则抛出异常
+      enable-auto-commit: false # 是否自动提交偏移量
+      auto-commit-interval: 1000  # 自动提交偏移量的间隔时间, 默认5s
       fetch-max-wait: 1000  # poll 一次拉取的阻塞的最大时长，单位：毫秒。这里指的是阻塞拉取需要满足至少 fetch-min-size 大小的消息
       fetch-min-size: 10   # poll 一次消息拉取的最小数据量，单位：字节
       max-poll-records: 100  # poll 一次消息拉取的最大数量
-    # 监听器配置
-    listener:
+      properties:
+        sync-commits: true # 同步提交offset
+        isolation:
+          level: read_committed # 默认 read_uncommitted 会看到事务未提交的消息
+    listener: # 监听器配置
       type: batch # 批量消费
-      # 消息确认模式：manual-手动确认，auto-自动确认
-      ack-mode: manual_immediate
-      # 并发消费者数量
-      concurrency: 3
+      ack-mode: manual_immediate # 消息确认模式：manual-手动批量确认，auto-自动确认，manual_immediate-立即确认
+      concurrency: 1 # 并发消费者数量
+
       # 重试配置
-      retry:
-        # 是否启用重试
-        enabled: true
-        # 初始重试间隔时间
-        initial-interval: 1000
-        # 最大重试间隔时间
-        max-interval: 10000
-        # 重试乘数
-        multiplier: 2
-        # 最大重试次数
-        max-attempts: 3
+#      retry:
+#        # 是否启用重试
+#        enabled: true
+#        # 初始重试间隔时间
+#        initial-interval: 1000
+#        # 最大重试间隔时间
+#        max-interval: 10000
+#        # 重试乘数
+#        multiplier: 2
+#        # 最大重试次数
+#        max-attempts: 3
 
 
 
